--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -9,6 +9,8 @@
  BSQ_ADJ: "Basque"
  PON: "Pontus"
  PON_ADJ: "Pontic"
+ AGU: "Anglo-Dutch Union"
+ AGU_ADJ: "Anglo-Dutch"
  ALP: "Alpland"
  ALP_ADJ: "Alplandic"
  YUG: "Yugoslavia"
@@ -17,8 +19,12 @@
  BEL_ADJ: "Belgian"
  FRC: "Franconia"
  FRC_ADJ: "Franconian"
+ FRE: "French Empire"
+ FRE_ADJ: "French"
  NGC: "North German Confederation"
- NGC_ADJ: "German"
+ NGC_ADJ: "North German"
+ SGF: "South German Federation"
+ SGF_ADJ: "South German" 
  TSI: "Two Sicilies"
  TSI_ADJ: "Sicilian"
  ITE: "Italian Empire"
@@ -73,8 +79,8 @@
  ADR_ADJ: "Adriatic"
  HIM: "Himalayan Empire"
  HIM_ADJ: "Himalayan"
- ALL: "Alsace-Lorraine"
- ALL_ADJ: "Alsatian"
+ ALC: "Alsace-Lorraine"
+ ALC_ADJ: "Alsatian"
  FIB: "Franco-Iberia"
  FIB_ADJ: "Franco-Iberian"
  HEN: "Hesse-Nassau"
@@ -97,6 +103,8 @@
  AEH_ADJ: "Austrian"
  AHE: "Austro-Hungarian Empire"
  AHE_ADJ: "Austro-Hungarian"
+ JAE: "Empire of Japan"
+ JAE_ADJ: "Japanese"
  JGE: "Jagiellonian Empire"
  JGE_ADJ: "Jagiellonian"
  BSK: "United Kingdom of Bosnia-Serbia"
